--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 2vh;
 }
 
 .logo {
@@ -23,7 +24,7 @@ header {
   height: 70vh;
   position: fixed;
   bottom: 0;
-  right: -50px;
+  right: -80px;
 }
 
 .grid {
@@ -33,7 +34,7 @@ header {
   grid-template-columns: repeat(3, auto);
   width: 100%;
   height: 100%;
-  margin-top: 7vh;
+  margin-top: 5vh;
 }
 
 .celula {
@@ -67,4 +68,20 @@ header {
 .celula:nth-child(6),
 .celula:nth-child(9) {
   border-right: none;
+}
+
+.jogador-x {
+  font-size: 170px;
+  font-family: "Nunito", "Roboto", sans-serif;
+  text-align: center;
+  font-weight: 300;
+}
+
+.jogador {
+  font-size: 40px;
+  font-family: "Roboto", sans-serif;
+  position: fixed;
+  left: 2vw;
+  top: 0;
+  margin-top: 6vh;
 }
