--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,16 @@ header {
   top: 0;
   margin-top: 6vh;
 }
+
+button {
+  text-align: center;
+  height: 5vh;
+  width: 6vw;
+  font-size: 16px;
+}
+
+.container-botao {
+  justify-content: center;
+  display: flex;
+  margin-top: 5vh;
+}
